add karma, jasmine test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "wrap plane url with <a href=''></a>",
   "main": "lib/ahrefy.js",
   "scripts": {
-    "start": "nf start"
+    "start": "nf start",
+    "test": "karma start"
   },
   "author": "Hiroshi Ogawa",
   "license": "ISC",
@@ -14,7 +15,15 @@
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
     "foreman": "^1.4.1",
+    "html-loader": "^0.4.3",
     "http-server": "^0.9.0",
+    "jasmine-core": "^2.4.1",
+    "karma": "^1.0.0",
+    "karma-chrome-launcher": "^1.0.1",
+    "karma-cli": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "webpack": "^1.13.1"
   }
 }
